Update main.tex: fix errore ortografia

--- a/main.tex
+++ b/main.tex
@@ -442,7 +442,7 @@
         \emph{Prob marginali:}
         $p_X(a) = \sum_{b\in A_y} p_{X,Y}(a,b) = \sum_{b\in A_y}p_Y(b) p_{X|Y}(a|b)$,
         $p_Y(b) = \sum_{a\in A_x} p_{X,Y}(a,b) = \sum_{a\in A_x}p_X(a) p_{Y|X}(b|a)$.\\
-        \textbf{Probbilità di errore media (matrice transizione).}
+        \textbf{Probabilità di errore media (matrice transizione).}
         $P_{X\neq Y} = \sum_{a\neq b} p_{X,Y}(a,b) = \sum_{a\neq b} p_{X}(a)p_{Y|X}(b|a)$.
     \end{minipage}
 };
